--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,7 +7,7 @@
     <%= link_to 'ログイン', new_user_session_path %>
   <% end %>
   
-  <%= month_calendar start_day: :sunday do |date| %>
+  <%= month_calendar do |date| %>
     <%= date.day %>
   <% end %>
 </p>
