--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,14 +1,5 @@
-<h1>モチベボタンくん</h1>
-<p>
-  <% if user_signed_in? %>
-    <%= link_to '気分を記録する', new_mood_path %>
-    <%= button_to 'ログアウト', destroy_user_session_path, method: :delete, form: { data: { turbo_confirm: 'ログアウトしますか？' } } %>
-  <% else %>
-    <%= link_to '新規登録', new_user_registration_path %> |
-    <%= link_to 'ログイン', new_user_session_path %>
-  <% end %>
+<%= render 'shared/header' %>
   
-  <%= month_calendar do |date| %>
-    <%= date.day %>
-  <% end %>
-</p>
+<%= month_calendar do |date| %>
+  <%= date.day %>
+<% end %>
