--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
 
     <div class="app-header__nav">
       <% if user_signed_in? %>
-        <%= link_to '気分を記録する', new_mood_path, class: 'app-header__link' %>
+        <%= link_to '今日の気分は？', new_mood_path, class: 'app-header__link' %>
         <%= button_to 'ログアウト', destroy_user_session_path,
               method: :delete,
               form: { data: { turbo_confirm: 'ログアウトしますか？' }, class: 'app-header__logout-form' },
