--- a/app/views/moods/new.html.erb
+++ b/app/views/moods/new.html.erb
@@ -4,7 +4,7 @@
   <p><%= message %></p>
 <% end %>
 
-<%= form_with(model: @mood, local: true) do |f| %>
+<%= form_with model: @mood, local: true do |f| %>
   <div class="image-options">
     <% images_with_scores = [
       ["yaruki_moeru_man.png", 5],
