--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,15 @@
+<%= render 'shared/header' %>
+
 <h2><%= l(@date, format: :long) %> のタスク</h2>
 <% if @tasks.any? %>
   <ul>
     <% @tasks.each do |t| %>
-      <li><%= t.content %></li>
+      <li>
+        <%= form_with model: t, url: task_path(t), method: :patch, local: true do |f| %>
+          <%= f.check_box :completed, { onchange: 'this.form.submit();' } %>
+          <%= t.content %>
+        <% end %>
+      </li>
     <% end %>
   </ul>
 <% else %>
