アドバイスコメントの設定

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/header' %>
 
-<%= form_with model: @task, local: true do |f| %>
+<%= form_with model: @task, local: true, html: { id: 'task-form' } do |f| %>
   <div id="tasks-wrapper">
     <div class="task-field">
       <input type="text" name="tasks[][content]" placeholder="タスク内容">
