装飾のための修正

--- a/app/views/moods/new.html.erb
+++ b/app/views/moods/new.html.erb
@@ -22,7 +22,7 @@
     <% end %>
   </div>
 
-  <%= f.submit "送信" %>
+  <%= f.submit "送信", class: "mood-submit" %>
 <% end %>
 
   <p>画像は「いらすとや」より引用しています（https://www.irasutoya.com/）</p>
