--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,17 +1,14 @@
 <header class="app-header">
   <div class="app-header__inner">
     <%= link_to root_path, class: "app-header__logo" do %>
-      MotiveButton Kun
+      MotiveButtonKun
     <% end %>
 
     <div class="app-header__nav">
       <% if user_signed_in? %>
         <span class="app-header__user"><%= current_user.nickname %></span>
         <span class="app-header__divider" aria-hidden="true">|</span>
-        <%= button_to 'ログアウト', destroy_user_session_path,
-              method: :delete,
-              form: { data: { turbo_confirm: 'ログアウトしますか？' }, class: 'app-header__logout-form' },
-              class: 'app-header__button' %>
+        <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: 'ログアウトしますか？' }, class: 'app-header__link' %>
       <% else %>
         <%= link_to '新規登録', new_user_registration_path, class: 'app-header__link' %>
         <span class="app-header__divider" aria-hidden="true">|</span>
