--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -28,6 +28,6 @@
 <% end %>
 
 <div style="margin-top: 16px;">
-  <%= link_to 'この日の表示に戻る', task_path(@date) %> |
+  <%= link_to 'タスク一覧に戻る', task_path(@date) %> |
   <%= link_to 'カレンダーに戻る', root_path %>
 </div>
