--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,31 +1,33 @@
 <%= render 'shared/header' %>
 
-<div class="task-show">
-  <h2><%= l(@date, format: :long) %> のタスク</h2>
+<div class="container">
+  <div class="task-show">
+    <h2><%= l(@date, format: :long) %> のタスク</h2>
 
-  <% if @mood.present? && @mood.image_name.present? %>
-    <div class="mood-image">
-      <%= image_tag @mood.image_name, alt: "選択した気分画像" %>
-    </div>
-  <% end %>
-
-<% if @tasks.any? %>
-  <ul id="task-list">
-    <% @tasks.each do |t| %>
-      <li>
-        <%= form_with model: t, url: task_path(t), method: :patch, local: true do |f| %>
-          <%= f.check_box :completed, class: "task-toggle" %>
-          <%= content_tag(:span, t.content, class: ["task-content", ("is-completed" if t.completed?)].compact.join(" ")) %>
-        <% end %>
-      </li>
+    <% if @mood.present? && @mood.image_name.present? %>
+      <div class="mood-image">
+        <%= image_tag @mood.image_name, alt: "選択した気分画像" %>
+      </div>
     <% end %>
-  </ul>
-<% else %>
-  <p>この日にはタスクがありません。</p>
-<% end %>
 
-  <div class="task-show__links">
-    <%= link_to '編集', edit_task_path(@date) %> |
-    <%= link_to 'カレンダーに戻る', root_path %>
+    <% if @tasks.any? %>
+      <ul id="task-list">
+        <% @tasks.each do |t| %>
+          <li>
+            <%= form_with model: t, url: task_path(t), method: :patch, local: true, html: { style: 'display: contents;' } do |f| %>
+              <%= f.check_box :completed, class: "task-toggle", onchange: 'this.form.requestSubmit()' %>
+              <%= content_tag(:span, t.content, class: ["task-content", ("is-completed" if t.completed?)].compact.join(" ")) %>
+            <% end %>
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+      <p>この日にはタスクがありません。</p>
+    <% end %>
+
+    <div class="task-show__links">
+      <%= link_to '編集', edit_task_path(@date), class: 'btn-primary', style: 'background-color: #34cfeb;' %>
+      <%= link_to 'カレンダーに戻る', root_path, class: 'btn-primary', style: 'background-color: #95a5a6;' %>
+    </div>
   </div>
 </div>
